--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -14,6 +14,8 @@
 			<%= f.input :count, :required => true, label: 'Count' %>
 			<%= f.input :offer, :required => true, label: 'Wage offer' %>
 			<%= f.input :valid_until, :as => :date_picker, :required => true, label: 'Valid until', :input_html => {:class => 'col-span-3 form-control'} %>
+			<%= f.input :contact_email, :required => false, label: 'Contact e-mail' %>
+			<%= f.input :contact_phone, :required => false, label: 'Contact phone' %>
 		</div>
 
 		<br/>
