--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -12,8 +12,10 @@
 
 			<%= f.input :type, collection: [['Full time',1],['Part time',2]], label: 'Type', include_blank: false %>
 			<%= f.input :count, :required => true, label: 'Count' %>
-			<%= f.input :offer, :required => true, label: 'Wage offer' %>
+			<%= f.input :offer, :required => false, label: 'Wage offer' %>
 			<%= f.input :valid_until, :as => :date_picker, :required => true, label: 'Valid until', :input_html => {:class => 'col-span-3 form-control'} %>
+			<%= f.input :contact_email, :required => false, label: 'Contact e-mail' %>
+			<%= f.input :contact_phone, :required => false, label: 'Contact phone' %>
 		</div>
 
 		<br/>
