--- a/app/views/layouts/landingpage.html.erb
+++ b/app/views/layouts/landingpage.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <title><%= content_for?(:title) ? yield(:title) : "Drs" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Welcome to Dental Group" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Drs" %>">
 
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
@@ -26,10 +26,13 @@
           </button>
 
           <div class="nav-collapse collapse navbar-responsive-collapse">
+            <div class="logo">
+              <%= image_tag "logo2.png", alt: "logo", title: "Dent Group" %>
+            </div>
             <ul class="nav row">
               <%= render 'layouts/landingpage_navigation_links' %>
             </ul>
-            <div class="row">
+            <div class="row slider">
               <div class="col-sm-2 active-menu"></div>
             </div>
           </div>
@@ -50,7 +53,7 @@
     <div class="container">
       <div id="home-row-1" class="row clearfix">
         <div class="col-12">
-          <h1 class="font-semibold">DENTAL <span class="font-thin">SOMETHING</span></h1>
+          <h1 class="font-semibold">DENT <span class="font-thin">GROUP</span></h1>
           <h4 class="font-thin">We are a <span class="font-semibold">closed community</span> dedicated for dentists.</h4>
           <br>
           <br>
@@ -97,7 +100,7 @@
   <div class="slide story" id="slide-2" data-slide="2">
     <div class="container">
       <div class="row title-row">
-        <div class="col-12 font-thin">Dental Something, <span class="font-semibold">connects</span> you with your colleagues from <span class="font-semibold">everywhere around the world.</span></div>
+        <div class="col-12 font-thin">Dent Group, <span class="font-semibold">connects</span> you with your colleagues from <span class="font-semibold">everywhere around the world.</span></div>
       </div><!-- /row -->
       <div class="row line-row">
         <div class="hr">&nbsp;</div>
@@ -148,8 +151,8 @@
     </div><!-- /row -->
   </div><!-- /slide3 -->
   
-  <!-- === Slide 6 / Contact === -->
-  <div class="slide story" id="slide-6" data-slide="6">
+  <!-- === Slide 4 / Contact === -->
+  <div class="slide story" id="slide-4" data-slide="4">
     <div class="container">
       <div class="row title-row">
         <div class="col-12 font-light">Leave us a <span class="font-semibold">message</span></div>
@@ -180,5 +183,7 @@
       </div><!-- /row -->
     </div><!-- /container -->
   </div><!-- /Slide 6 -->
+
+  <%= render 'layouts/analytics' %>
   </body>
 </html>
