--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,6 @@
-<div class="box" style="height:650px;">
-	<h2>Latest activity</h2>
+<div class="homepage-container box">
+	<%= link_to t('about'), about_path %>
+
+	<br/><br/>
+	CE SA FIE AICI?
 </div>
