--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -10,7 +10,7 @@
 
 	<div class="offer-info">
 		<ul>
-			<li>Type: <span><%= ['', 'Selling', 'Buying'][@offer.type] %></span></li>
+			<li>Type: <span><%= ['', 'Selling', 'Buying', 'Rental'][@offer.type] %></span></li>
 			<li>Contact e-mail: <span><%= @offer.contact_email %></span></li>
 			<li>Contact phone: <span><%= @offer.contact_phone %></span></li>
 		</ul>
