--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,12 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require fancybox
  *= require_tree .
  *= require bootstrap-datetimepicker
+ *= require jquery.fileupload-ui
+ *= require fancybox
  */
-
-#loginForm {
-	color: #fff;
-	margin-top: 8px;
-}
