--- a/app/views/offers/edit.html.erb
+++ b/app/views/offers/edit.html.erb
@@ -4,7 +4,7 @@
 
 		<%= f.error_notification %>
 		<div class="form-inputs">
-			<%= f.input :type, collection: [['Selling',1],['Buying',2]], label: 'Type', include_blank: false %>
+			<%= f.input :type, collection: [['Selling',1],['Buying',2],['Rental',3]], label: 'Type', include_blank: false %>
 			<%= f.input :title, :required => true, label: 'Title' %>
 			<%= f.input :summary, :required => true, label: 'Summary' %>
 			<%= f.input :body, :required => true, label: 'Description', as: :ckeditor, input_html: { ckeditor: { height: 300 } } %>
