--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,8 @@
-<h1>Profile - <%= @user.full_name %></h1>
+<div class="profile-container">
+	<div class="profile-info">
+
+	</div>
+	<div class="profile-feed-container">
+		<h1>Profile - <%= @user.full_name %></h1>
+	</div>
+</div>
