--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -481,19 +481,13 @@ ul.nav {
 	height: auto;
 }
 
-#home-row-2 div.signup form input[type='submit'] {
-	padding: 5px 30px;
-}
+#home-row-2 div.signup form 
 #home-row-2 div.signup form input[type='email'],
 #home-row-2 div.signup form input[type='password'] {
 	width: 100%;
 }
-#home-row-2 div.signup .user_email {
-	width: 100%;
-}
-#home-row-2 div.signup form .form-actions {
-	margin-top: 10px;
-}
+#home-row-2 div.signup 
+#home-row-2 div.signup form 
 #home-row-2 div.signup form #user_lname,
 #home-row-2 div.signup form #user_fname {
 	width: 100%;
