--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -12,22 +12,22 @@
 	      </div><!-- /row -->
 	      <div class="row content-row">
 	        <div class="col-12 col-lg-3 col-sm-6">
-	          <p><i class="icon icon-globe"></i></p>
+	          <p><i class="fa fa-globe"></i></p>
 	          <h2 class="font-semibold">Connect</h2>
 	          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
 	        </div><!-- /col12 -->
 	        <div class="col-12 col-lg-3 col-sm-6">
-	          <p><i class="icon icon-share"></i></p>
+	          <p><i class="fa fa-share-square-o"></i></p>
 	          <h2 class="font-semibold">Share</h2>
 	          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
 	        </div><!-- /col12 -->
 	        <div class="col-12 col-lg-3 col-sm-6">
-	          <p><i class="icon icon-group"></i></p>
+	          <p><i class="fa fa-users"></i></p>
 	          <h2 class="font-semibold">Discuss</h2>
 	          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
 	        </div><!-- /col12 -->
 	        <div class="col-12 col-lg-3 col-sm-6">
-	          <p><i class="icon icon-pencil"></i></p>
+	          <p><i class="fa fa-pencil-square-o"></i></p>
 	          <h2 class="font-semibold">Something else</h2>
 	          <h4 class="font-thin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h4>
 	        </div>
