--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -77,3 +77,42 @@
 		}
 	}
 }
+
+.profile-container {
+	.stats {
+	  overflow: auto;
+	  a {
+	    float: left;
+	    padding: 0 10px;
+	    border-left: 1px solid #ddd;
+	    color: gray;
+	    &:first-child {
+	      padding-left: 0;
+	      border: 0;
+	    }
+	    &:hover {
+	      text-decoration: none;
+	      color: #3366FF;
+	    }
+	  }
+	  strong {
+	    display: block;
+	  }
+	}
+	.user_avatars {
+	  overflow: auto;
+	  margin-top: 10px;
+	  .gravatar {
+	    margin: 1px 1px;
+	  }
+	}
+}
+
+.profile-avatar {
+	height: 50px;
+	width: 50px;
+}
+.user_avatars .profile-picture {
+	height: 50px;
+	width: 50px;
+}
